--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "deploy": "$npm_execpath run build && wrangler pages deploy ./dist"
   },
   "dependencies": {
+    "@hono/react-renderer": "^0.0.2",
     "hono": "^4.0.4",
-    "honox": "^0.1.3"
+    "honox": "^0.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240208.0",
     "@hono/vite-cloudflare-pages": "^0.2.4",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
     "vite": "^5.0.12",
     "wrangler": "^3.27.0"
   }
