--- a/package.json
+++ b/package.json
@@ -5,22 +5,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --mode client && vite build",
-    "preview": "wrangler pages dev ./dist",
-    "deploy": "$npm_execpath run build && wrangler pages deploy ./dist"
+    "preview": "wrangler pages dev",
+    "deploy": "$npm_execpath run build && wrangler pages deploy",
+    "check": "biome check --apply-unsafe ."
   },
   "dependencies": {
-    "@hono/react-renderer": "^0.0.2",
-    "hono": "^4.0.4",
-    "honox": "^0.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "hono": "^4.3.11",
+    "honox": "^0.1.17"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240208.0",
-    "@hono/vite-cloudflare-pages": "^0.2.4",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "vite": "^5.0.12",
-    "wrangler": "^3.27.0"
+    "@biomejs/biome": "^1.7.3",
+    "@cloudflare/workers-types": "^4.20240403.0",
+    "@hono/vite-cloudflare-pages": "^0.4.0",
+    "@hono/vite-dev-server": "^0.12.1",
+    "vite": "^5.2.11",
+    "wrangler": "^3.47.0"
   }
 }
