--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,10 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "strict": true,
-    "lib": [
-      "ESNext",
-      "DOM"
-    ],
-    "types": [
-      "@cloudflare/workers-types"
-    ],
+    "skipLibCheck": true,
+    "lib": ["ESNext", "DOM"],
+    "types": ["vite/client", "@cloudflare/workers-types"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
-  },
+  }
 }
