--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "check": "biome check --apply-unsafe ."
   },
   "dependencies": {
+    "@hono/react-renderer": "^0.2.0",
     "hono": "^4.3.11",
-    "honox": "^0.1.17"
+    "honox": "^0.1.17",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.7.3",
     "@cloudflare/workers-types": "^4.20240403.0",
     "@hono/vite-cloudflare-pages": "^0.4.0",
     "@hono/vite-dev-server": "^0.12.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "vite": "^5.2.11",
     "wrangler": "^3.47.0"
   }
