--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "lib": ["ESNext", "DOM"],
     "types": ["vite/client", "@cloudflare/workers-types"],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
+    "jsxImportSource": "react"
   }
 }
