--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@hono/vite-dev-server": "^0.12.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.11",
     "wrangler": "^3.47.0"
   }
