--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "packageManager": "pnpm@9.5.0",
   "dependencies": {
-    "@hono/react-renderer": "^0.2.0",
-    "hono": "^4.3.11",
-    "honox": "^0.1.17",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@hono/react-renderer": "^0.2.1",
+    "hono": "^4.5.3",
+    "honox": "^0.1.23",
+    "react": "npm:@hono/react-compat@^0.0.1",
+    "react-dom": "npm:@hono/react-compat@^0.0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.7.3",
