--- a/package.json
+++ b/package.json
@@ -4,30 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build --mode client && vite build",
-    "preview": "wrangler pages dev",
-    "deploy": "$npm_execpath run build && wrangler pages deploy",
-    "check": "biome check --apply-unsafe ."
+    "build": "vite build --mode client && vite build && cp ./.assetsignore ./dist",
+    "preview": "wrangler dev",
+    "deploy": "pnpm run build && wrangler deploy",
+    "check": "biome check --write --unsafe ."
   },
-  "packageManager": "pnpm@9.5.0",
+  "packageManager": "pnpm@9.15.0",
   "dependencies": {
-    "@hono/react-renderer": "^0.2.0",
-    "hono": "^4.3.11",
-    "honox": "^0.1.17",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "hono": "^4.7.2",
+    "honox": "^0.1.38"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.7.3",
-    "@cloudflare/workers-types": "^4.20240403.0",
-    "@hono/vite-cloudflare-pages": "^0.4.0",
-    "@hono/vite-dev-server": "^0.12.1",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.11",
-    "wrangler": "^3.47.0"
+    "@cloudflare/workers-types": "^4.20250214.0",
+    "@hono/vite-build": "^1.3.0",
+    "@hono/vite-dev-server": "^0.19.0",
+    "@tailwindcss/vite": "^4.0.9",
+    "tailwindcss": "^4.0.9",
+    "vite": "^6.1.1",
+    "wrangler": "^3.109.2"
   }
 }
