--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "packageManager": "pnpm@9.15.0",
   "dependencies": {
+    "@hono/react-renderer": "^0.3.0",
     "hono": "^4.7.2",
-    "honox": "^0.1.38"
+    "honox": "^0.1.38",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.7.3",
@@ -20,6 +23,8 @@
     "@hono/vite-build": "^1.3.0",
     "@hono/vite-dev-server": "^0.19.0",
     "@tailwindcss/vite": "^4.0.9",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "tailwindcss": "^4.0.9",
     "vite": "^6.1.1",
     "wrangler": "^3.109.2"
