--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,7 @@
     "enabled": true
   },
   "files": {
-    "ignore": ["dist"]
+    "ignore": ["dist", "app/style.css"]
   },
   "linter": {
     "enabled": true,
