feat: add interactive Ark UI components(not working)

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hono/react-renderer": "^0.3.0",
     "hono": "^4.7.2",
     "honox": "^0.1.38",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
